<resources>
    <string name="app_name">Space pictures</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="bad_request">Error 400(Bad Request)</string>
    <string name="unauthorized">Error 401 (Unauthorized)</string>
    <string name="payment_required">Error 402 (Payment Required)</string>
    <string name="forbidden">Error 403 (Forbidden)</string>
    <string name="not_found">Error 404 (Not Found)</string>
    <string name="IOE_exception">Server access error</string>
    <string name="search_wiki">Search in Wikipedia</string>
    <string name="wiki_helper_text">Look up the term on wikipedia</string>
    <string name="photo_of_the_day_stub">Photo of the day</string>
    <string name="favourites">Favorites</string>
    <string name="settings">Settings</string>
    <string name="default_text">Default</string>
    <string name="first_screen">First screen</string>
    <string name="second_screen">Second screen</string>
    <string name="first_theme">First theme</string>
    <string name="second_theme">Second theme</string>
    <string name="choose_theme">Choose theme</string>
    <string name="default_theme">Default theme</string>
    <string name="no_photo">No photo</string>
    <string name="other_photo">Other photo</string>
</resources>